@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-12T16:21:24Z",
+  "timestamp" : "2023-10-15T01:15:46Z",
   "count_outdated" : 337,
   "uniques_outdated" : 92,
-  "count" : 364,
-  "uniques" : 95,
+  "count" : 365,
+  "uniques" : 96,
   "views" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
