@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 1,
   "views": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
